# cthings_todo

./: .gitignore  README.md  docker-compose.yaml
todo-project/: Dockerfile  mongo-init.js  pyproject.toml
todo-project/app/: config.py  database.py  main.py
todo-project/app/models/: task.py
todo-project/app/routes/: task.py
todo-project/src/: main.py
