[tool.poetry]
name = "todo-project"
version = "0.1.0"
description = "Simple FastAPI TODO application"
authors = ["maciej.sitowski <maciej.sitowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.94.1"
uvicorn = "0.21.1"
pymongo = "^4.3.3"
motor = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
